# RedProof

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
artifact/: Cargo.toml
artifact/schema/: redproof.schema.json
artifact/src/: lib.rs
docs/: ARCHITECTURE.md  CRITIQUE.md  PHASES.md  ROADMAP.md
docs/phase-0/: README.md  cli-ux.md  glossary.md  schema.md  threat-model.md
docs/phase-1/: README.md  runbook.md
docs/phase-2/: README.md  runbook.md
examples/: sample-hsts-missing.red.json
examples/phase-2/: README.md  example-tampered.red  example.red
prover/: Cargo.toml
prover/src/: capture.rs  commit.rs  evaluate.rs  main.rs
statements/: Cargo.toml
statements/src/: lib.rs  parser.rs
verifier/: Cargo.toml
verifier/src/: main.rs
zk/: Cargo.toml
zk/src/: lib.rs
