[workspace]
members = [
    "artifact",
    "prover",
    "statements",
    "verifier",
    "zk"
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["RedProof Team <opensource@redproof.dev>"]
license = "MIT"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
once_cell = "1"
regex = "1"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
