[workspace]
members = [
    "artifact",
    "prover",
    "statements",
    "verifier",
    "zk"
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["RedProof Team <opensource@redproof.dev>"]
license = "MIT"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
blake3 = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
http = "1"
httparse = "1"
once_cell = "1"
regex = "1"
rustls = { version = "0.23", default-features = false, features = ["logging", "std", "tls12"] }
rustls-native-certs = "0.7"
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
sha2 = "0.10"
thiserror = "1"
url = "2"
