[package]
name = "redproof-prover"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "redproof-prover"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
http = { workspace = true }
httparse = { workspace = true }
regex = { workspace = true }
redproof-artifact = { path = "../artifact" }
redproof-statements = { path = "../statements" }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_cbor = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
