[package]
name = "redproof-verifier"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "redproof-verify"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
redproof-artifact = { path = "../artifact" }
serde = { workspace = true }
serde_json = { workspace = true }
