[package]
name = "redproof-verifier"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "redproof-verify"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
clap = { workspace = true }
redproof-artifact = { path = "../artifact" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_cbor = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
